--- a/academy.html
+++ b/academy.html
@@ -255,7 +255,11 @@
       </button>
       <div class="panel">
         <div class="course-details">
-          <p><strong>Course Overview:</strong> Learn about precision farming, crop health monitoring, yield forecasting, and smart farm management tools with AI.</p>
+          <p><strong>Course Overview:</strong>
+            •Learn about precision farming,
+           • crop health monitoring,
+           • yield forecasting, 
+           • smart farm management tools with AI.</p>
           <p><strong>Course Objectives:</strong> Implement AI in operations and resource allocation, Enhance decision-making with data analytics, Apply AI to social or environmental initiatives, Measure outcomes with AI-powered tools.</p>
           <p><strong>Course Modules:</strong> AI for Organizations & NGOs, AI for Sustainability & Operations, Data-Driven Decision Making, Organizational AI Projects.</p>
           <p><strong>Hands-on Projects:</strong> Develop AI tools to allocate resources efficiently, Build dashboards showing organizational or social impact.</p>
