--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Igniting Africa's Future with Intelligent AI</h1>
+            <h1>Igniting Future with Intelligent AI</h1>
             <p>Wab Tech AI: Pioneering ethical solutions, empowering knowledge, and transforming every facet of life and industry.</p>
             <a href="#" class="btn btn-primary">Explore Our AI Solutions</a>
         </div>
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="section-card">
                 <h2>Our Vision for the Future</h2>
-                <p>A future where intelligent technology enriches daily lives, fuels sustainable progress, and unlocks unprecedented human potential for all in Africa and beyond.</p>
+                <p>A future where intelligent technology enriches daily lives, fuels sustainable progress, and unlocks unprecedented human potential  beyond.</p>
             </div>
             <div class="section-card">
                 <h2>Our Mission Today</h2>
