--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WabTech AI - Empowering through AI</title>
+    <title>WabTech AI - AI Solutions for Climate & Agriculture</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -12,25 +12,39 @@
         <div class="header-content-left">
             <img src="ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
         </div>
+        <nav class="nav-menu">
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul class="nav-list">
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="solutions.html">Our Solutions</a></li>
+                <li><a href="resources.html">Resources</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="careers.html">Careers</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Igniting Future with Intelligent AI</h1>
-            <p>Wab Tech AI: Pioneering ethical solutions, empowering knowledge, and transforming every facet of life and industry.</p>
-            <a href="#" class="btn btn-primary">Explore Our AI Solutions</a>
+            <h1>AI Solutions for B2B Climate & Agriculture</h1>
+            <p>We empower businesses in Kenya to mitigate climate risks, optimize operations, and create new revenue streams using AI.</p>
+            <a href="#" class="btn btn-primary">Explore Our Solutions</a>
         </div>
     </section>
 
     <section class="vision-mission">
         <div class="container">
             <div class="section-card">
-                <h2>Our Vision for the Future</h2>
-                <p>A future where intelligent technology enriches daily lives, fuels sustainable progress, and unlocks unprecedented human potential  beyond.</p>
+                <h2>Our Vision for a Sustainable Africa</h2>
+                <p>A future where intelligent technology empowers businesses to create sustainable, resilient operations that protect the environment and fuel economic growth.</p>
             </div>
             <div class="section-card">
                 <h2>Our Mission Today</h2>
-                <p>Wab Tech AI is dedicated to creating and deploying cutting-edge, locally-relevant AI literacy, ensuring intelligent technology serves humanity and addresses critical challenges across diverse sectors.</p>
+                <p>Wab Tech AI is dedicated to providing cutting-edge, locally-relevant AI solutions that help businesses in the agricultural sector solve critical climate-related challenges and drive growth.</p>
             </div>
         </div>
     </section>
@@ -39,38 +53,38 @@
         <div class="container">
             <div class="section-card">
                 <h2>About WabTech AI</h2>
-                <p>Wab Tech AI is a pioneering company dedicated to democratizing Artificial Intelligence. We believe in creating a world where AI serves humanity by providing innovative, ethical, and practical solutions across diverse sectors. Our work is focused on empowering individuals, businesses, and communities in Africa to leverage AI for growth, education, and positive social change.</p>
+                <p>Wab Tech AI is a pioneering company built in Kenya to address climate change head-on. Our work is focused on creating innovative, ethical, and practical AI solutions for businesses, empowering them to leverage technology for growth and positive environmental impact. We believe in building a more resilient Africa, one data-driven decision at a time.</p>
             </div>
         </div>
     </section>
 
     <section class="niches-overview">
         <div class="container">
-            <h2>Our Niche Expertise</h2>
+            <h2>Our Solutions</h2>
             <div class="niche-cards-container">
-                <a href="wabtech-talentnetwork.html" class="niche-card">
-                    <h3>WabTech AI Talent Network</h3>
-                    <p>Connect with top AI talent from our vetted network for your projects.</p>
-                    <span class="read-more">Read More</span>
-                </a>
-                <a href="education.html" class="niche-card">
-                    <h3>Wab Tech AI Academy</h3>
-                    <p>Our educational solutions are designed to modernize learning and empower all ages.</p>
-                    <span class="read-more">Read More</span>
-                </a>
                 <a href="business.html" class="niche-card">
-                    <h3>Business: AI Solutions for Your Business</h3>
-                    <p>Empower your enterprise with intelligent solutions that boost efficiency and growth.</p>
+                    <h3>AI for Smarter Business in Agriculture</h3>
+                    <p>Our flagship platform uses AI to help businesses optimize their agricultural supply chains and boost efficiency from the ground up.</p>
+                    <span class="read-more">Learn More</span>
+                </a>
+                <a href="#" class="niche-card">
+                    <h3>Climate Risk Assessment for Businesses</h3>
+                    <p>We are developing models to help businesses and financial institutions better assess climate-related risks for their operations.</p>
                     <span class="read-more">Read More</span>
                 </a>
                 <a href="#" class="niche-card">
-                    <h3>Agriculture: Smarter Farming with AI</h3>
-                    <p>We bring precision agriculture to the forefront of sustainable food production.</p>
+                    <h3>AI for Water Management</h3>
+                    <p>Our long-term vision is to apply our AI models to address water scarcity and improve conservation for businesses and cities.</p>
                     <span class="read-more">Read More</span>
                 </a>
                 <a href="#" class="niche-card">
-                    <h3>Climate: Harnessing AI for a Sustainable Planet</h3>
-                    <p>We bring a new approach to Africa's most pressing environmental challenges.</p>
+                    <h3>Carbon Credit Verification</h3>
+                    <p>We aim to create a transparent system for businesses to verify carbon offset projects and attract green investment.</p>
+                    <span class="read-more">Read More</span>
+                </a>
+                <a href="#" class="niche-card">
+                    <h3>Green Building Optimization</h3>
+                    <p>We are developing a platform that uses AI to reduce energy consumption in commercial and residential buildings.</p>
                     <span class="read-more">Read More</span>
                 </a>
             </div>
@@ -91,4 +105,3 @@
 
 </body>
 </html>
-
